# snipsnap

./: .env.example  .gitignore  README.md  pyproject.toml
.factory/: init.sh  services.yaml
.factory/research/: DAVINCI_RESOLVE_SCRIPTING_RESEARCH.md
.factory/skills/backend-worker/: SKILL.md
.factory/skills/web-worker/: SKILL.md
.factory/validation/core-pipeline/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/core-pipeline/scrutiny/reviews/: cli-curate.json  cli-status-help.json  cli-transcribe.json  core-pipeline-scrutiny-fixes.json  curation-engine.json  project-setup.json  transcription-engine.json
.factory/validation/core-pipeline/user-testing/: synthesis.json  synthesis.round1.json
.factory/validation/core-pipeline/user-testing/flows/: cli.json  cur-a.json  cur-b.json  cur-cross.json  (+5 more)
.factory/validation/export/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/export/user-testing/: synthesis.json
.factory/validation/web-ui/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/web-ui/user-testing/: synthesis.json
snipsnap/: __init__.py  cli.py  config.py  errors.py  init_wizard.py  models.py  storage.py
snipsnap/curation/: __init__.py  chunking.py  engine.py
snipsnap/export/: __init__.py  davinci.py  edl.py  fcpxml.py
snipsnap/transcription/: __init__.py  base.py  whisper_local.py
snipsnap/web/: __init__.py  app.py
snipsnap/web/static/: index.html
tests/: conftest.py  test_cli.py  test_curation.py  test_export.py  test_models.py  test_storage.py  test_transcription.py  test_web.py
(+11 files in other folders)
