[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snipsnap"
version = "0.1.0"
description = "Multi-stage video curation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
snipsnap = "snipsnap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snipsnap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
